# html-cleaner

./: .gitignore  Attribute.h  CMakeLists.txt  CleanerOption.h  Configuration.cpp  Configuration.h  HtmlDocument.cpp  HtmlDocument.h  HtmlGenerator.cpp  HtmlGenerator.h  Lexer.cpp  Lexer.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Position.cpp  Position.h  README.md  TagOpener.h  Token.cpp  Token.h  main.cpp  sample1.html  test_lexer.cpp  util.cpp  util.h
doc/: doc-final.tex
old/: old_lexer
test/: sample1.html  sample1.out.html  test_generator.cpp  test_lexer.cpp  test_parser.cpp
test/interia/: interia.pl.html  interia.pl.out.html
test/interia/Interia - Polska i świat_ informacje, sport, gwiazdy._files/: 0F7S7QWJ0Ac(1).html  420620142.js  62429d30b8346bfc6a727ba2e8032c9f-videoplayers-c0a0000f81ec0213c043693c07f734a6.js  67b573c520834da468f660657f858a4c-scripts-130cf84ff823e4e1d1f85a2e552c5e3e.js  93750aa05c0925082dd0c2d9a3c8d898-inpl.cookiepolicy-93bfe0c91de3e3283d7f9787a642f024.js  B11428273.html  FSFL6WYMDFEHHEGBYSVZW2  FSFL6WYMDFEHHEGBYSVZW2(1)  JSAdservingSP.ashx  ad.js  ads(1).html  ads.html  b2a620649aa8a3890e0efcb721a7d7ff-sgonly-f3d437c4a52f52b1a1c279fc4d3a1f19.js  b954981041f0197791ae1014fc88c690-libs-d1d8e4d95ad49006dc3dac4b76552747.js  ba.js  bootstrapScript.js  c71bec23927a8ad66e393aac21b697db-inpl.storage-2992ee3239bf277cdec1b007daf0fe3c.js  criteo.jssc  d876c6de326704e604484c4705475eb3-sponsored-c622a6a782c4c720215647114a219cc7.js  empt.js  gemiuslib.js  gsscript.js  gw.js  hawkeye_proto.jssc  iframe(1).html  iframe(2).html  iframe.html  index.html  inpl.adb.js  inpl.anc.js  inpl.intad.js  inpl.videoplayer.js  inpl_ad_adsea.41002-1421.min.js  iwa.js  like.html  lsget.html  matchMainScript.js  netsprint.jssc  pql  rta.js  (+17 more)
test/onet/: DOM.txt  Onet.pl.html  Onet.pl.out..html  Onet.pl.out.html
test/onet/Onet.pl_files/: 1511413572442101  61110  62772  950x200.js  BtkktkqTURBXy8xYjk2MTVlMjU4ZTA1NDUzN2QzODYyOTE5YjMyYjNlZS5qcGVnkpUDzIMAzRCBzQsBkwVmRA  JSAdservingMP(1).ashx  JSAdservingMP(2).ashx  JSAdservingMP(3).ashx  JSAdservingMP.ashx  Klasa_C_1260x600.js  Klasa_C_1260x600_v1.html  PJektkqTURBXy8xMGMwY2EzY2EzY2ZlOTZhYWQzYzQxNjBkOTg5NDQ5Mi5qcGVnkZQCADLC  YnVpbGQve09ZWTY1eFdLfWRsQXBpL2RsLmxpYntaV1lhUzdmaH0ubWluLmpz  ads  ads.html  ai.aspx  bridge3.169.1_en.html  client.js  compiled.css  compiled.min.js  container.html  csr(1).js  csr(2).js  csr(3).js  csr(4).js  csr(5).js  csr.js  dl.sg.utils.min.js  embed(1).js  embed-external.html  embed.js  embedExternal.css  gemiuslib.js  gplayer.js  gtm(1).js  gtm.js  iframe_api  imgad  index(1).html  index(2).html  (+44 more)
tokens/: ClosingTagOpenToken.h  CommentCloseToken.h  CommentOpenToken.h  DoctypeToken.h  DoubleQuoteToken.h  EOFToken.h  EqualsToken.h  InlineTagCloseToken.h  SingleQuoteToken.h  TagCloseToken.h  TagOpenToken.h  TextToken.h  Token.cpp  Token.h
